# EchoLensAI

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  DOCKER.md  README.md  SETUP.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
app/: celery_app.py  exceptions.py  main.py
app/api/: admin.py  auth.py  chat.py  notifications.py  podcast-rss-urls.txt  podcasts.py  podcasts_auth.py  settings.py  tasks.py  terms.py
app/core/: config.py  logging.py  logging_config.py  security.py  timezone.py
app/db/: session.py
app/middleware/: __init__.py  request_id.py
app/migrations/: README.md  add_auto_download_fields.sql  add_term_source.sql  add_user_authentication.sql  allow_duplicate_rss_urls.sql  change_vector_dimensions.sql
app/models/: __init__.py  podcast.py  prompt.py  settings.py  user.py
app/prompts/defaults/chat/: system_message.md
app/prompts/defaults/summarization/: chunk_summary.md  combine_chunks.md  single_pass.md
app/prompts/defaults/term_extraction/: elaborate.md  extract_names.md  extract_terms.md  get_definition.md
app/schemas/: chat.py  podcast.py
app/services/: audio_downloader.py  auth.py  chat.py  openai_client.py  prompt_loader.py  rss_parser.py  summarization.py  term_extraction.py  transcription.py  validators.py  vector_store.py
app/tasks/: __init__.py  data_import.py  episode_processing.py  podcast_refresh.py
assets/: darkmode.md  lightmode.md
docker/backend/: Dockerfile  Dockerfile.dev
docker/frontend/: Dockerfile  Dockerfile.dev
frontend/: .dockerignore  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/ai-enhanced/: page.tsx
frontend/app/api/proxy/[...path]/: route.ts
frontend/app/chat/: page.tsx
frontend/app/episodes/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/podcasts/[id]/: page.tsx
frontend/app/register/: page.tsx  page_backup.tsx
frontend/app/settings/: page.tsx
frontend/app/tasks/: page.tsx
frontend/app/tasks/[id]/: page.tsx
frontend/components/: add-podcast-modal.tsx  auto-download-modal.tsx  confirm-modal.tsx  delete-episode-data-modal.tsx  delete-podcast-modal.tsx  download-episode-modal.tsx  layout-content.tsx  markdown.tsx  podcast-card.tsx  protected-route.tsx  sidebar-context.tsx  sidebar.tsx  theme-toggle.tsx  top-bar.tsx
frontend/contexts/: auth-context.tsx
frontend/hooks/: useTaskMonitor.ts
frontend/lib/: api.ts  duration-utils.ts  image-utils.ts  logger.ts
scripts/: full-reset.sh  restart.sh  start-dev.sh  start.sh  status.sh  stop-dev.sh  stop.sh
